# NPRG051

./: CMakeLists.txt  README.md
static_ranges/: CMakeLists.txt  static_additional.cpp  static_for_test_1.cpp  static_for_test_all_view.cpp  static_for_test_concepts.cpp  static_for_test_convenience.cpp  static_for_test_copy.cpp  static_for_test_for_each.cpp  static_for_test_iota_view.cpp  static_for_test_static_iota_view.cpp  static_for_test_std.cpp  static_for_test_struct.hpp  static_for_test_to.cpp  static_for_test_transform.cpp  static_for_test_transform_view.cpp  static_ranges.hpp  static_ranges1.hpp
static_ranges/recodex_test/: output_test_1.txt  output_test_all_view.txt  output_test_convenience.txt  output_test_copy.txt  output_test_for_each.txt  output_test_static_iota_view.txt  output_test_std.txt  output_test_to.txt  output_test_transform.txt  output_test_transform_view.txt
threads/: a.out  example.cpp  priority_scheduler.hpp
units/: a.out  main.cpp  out1.txt  out2.txt  out4.txt  static_vector_basics.h  test1.cpp  test2.cpp  test3.cpp  test4.cpp  units.h
